--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "faker": "^4.1.0"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest-enzyme": "^4.1.1",
+    "react-test-renderer": "^16.2.0"
   },
   "jest": {
     "collectCoverageFrom": [
