--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "express": "^4.16.2",
     "jest-enzyme": "^4.1.1",
-    "react-test-renderer": "^16.2.0"
+    "morgan": "^1.9.0",
+    "react-test-renderer": "^16.2.0",
+    "simple-deployer": "^0.1.8"
   },
   "jest": {
     "collectCoverageFrom": [
